# global_livability_ai

./: .commit_msg.txt  .env.example  .gitignore  Dockerfile  Explanation.md  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: cd.yml  ci.yml
.streamlit/: config.toml
app/: app.py  country_profiles.py  image_utils.py
kestra/flows/: pipeline.yml  retrain.yml
models/: best_params_rf.yaml  best_params_xgb.yaml
src/: collect.py  explain.py  features.py  forecast.py  harmonize.py  impute.py  target.py  train.py  tune.py
terraform/: ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  s3.tf  variables.tf
tests/: test_data_quality.py  test_pipeline_units.py
